# wheel_legged_v3_copy

./: README.md
src/xingtian_dynamics/: CMakeLists.txt  package.xml
src/xingtian_dynamics/config/: arg.yaml  control.yaml  joint_names_xingtian.yaml
src/xingtian_dynamics/gazebo_ros_control/: joint_names_xingtian.yaml  pid_gains.yaml
src/xingtian_dynamics/include/Controllers/: ContactEstimator.txt  DesiredStateCommand.h  FootSwingTrajectory.h
src/xingtian_dynamics/include/FSM/: FSM.h  FSMState.h  State_BalanceTest.h  State_FixedStand.h  State_FreeStand.h  State_Passive.h  State_StepTest.h  State_SwingTest.h  State_Trotting.h  State_WheelTest.h  State_move_base.h
src/xingtian_dynamics/include/Gait/: FeetEndCal.h  GaitGenerator.h  GaitScheduler.h  WaveGenerator.h
src/xingtian_dynamics/include/SparseCMPC/: GraphSearch.h  SparseCMPC.h
src/xingtian_dynamics/include/Utilities/: Utilities_print.h  pseudoInverse.h  utilities.h
src/xingtian_dynamics/include/WBC/: ContactSpec.hpp  Task.hpp  WBC.hpp
src/xingtian_dynamics/include/WBC_Ctrl/: WBC_Ctrl.hpp
src/xingtian_dynamics/include/common/: Interpolation.h  LowPassFilter.h  MathUtilities.h  Quadruped.h  SpatialInertia.h  cTypes.h  cppTypes.h  enumClass.h  mathTools.h  orientation_tools.h  spatial.h  timeMarker.h  xingtian.h  xingtian_leg.h  xingtianrobot.h
src/xingtian_dynamics/include/control/: BalanceCtrl.h  ControlFrame.h  CtrlComponents.h  Estimator.h  Estimator_new.txt  StateEstimatorContainer.xml  xingtian_parameters.h
src/xingtian_dynamics/include/convexMPC/: ConvexMPCLocomotion.h  Gait.h  RobotState.h  SolverMPC.h  convexMPC_interface.h
src/xingtian_dynamics/include/interface/: CmdPanel.h  IOInterface.h  KeyBoard.h  sim_gazebo_ros.h
src/xingtian_dynamics/include/message/: LowlevelCmd.h  LowlevelState.h  unitree_joystick.h
src/xingtian_dynamics/include/real_robot/: rt_rc_interface.h
src/xingtian_dynamics/launch/: display.launch  gazebo.launch  xingtian.launch
src/xingtian_dynamics/meshes/: base_link.STL  base_link1.STL  yht_dianjizhou.STL  yht_qubing.STL  yht_wheel.STL  yht_yao.STL  yqt_dianjizhou.STL  yqt_qubing.STL  yqt_wheel.STL  yqt_yao.STL  zht_dianjizhou.STL  zht_qubing.STL  zht_wheel.STL  zht_yao.STL  zqt_dianjizhou.STL  zqt_qubing.STL  zqt_wheel.STL
src/xingtian_dynamics/meshes/meshes_s/: base_link.STL  imu_link.STL  yht_dianjizhou.STL  yht_qubing.STL  yht_wheel.STL  yht_yao.STL  yqt_dianjizhou.STL  yqt_qubing.STL  yqt_wheel.STL  yqt_yao.STL  zht_dianjizhou.STL  zht_qubing.STL  zht_wheel.STL  zht_yao.STL  zqt_dianjizhou.STL  zqt_qubing.STL  zqt_wheel.STL  zqt_yao.STL
src/xingtian_dynamics/scripts/: adjust_PD_params.py  control.py  plot.py  rpy_convert_kalman.py  teleop_control.py  teleop_wheel_control.py
src/xingtian_dynamics/scripts/C++_control/: gazebo_control_Cpp.py  robot_control_gazebo.py
src/xingtian_dynamics/scripts/calc/: calc.py
src/xingtian_dynamics/scripts/covariance/: covariance.txt
src/xingtian_dynamics/scripts/gait/: pydog_attitude.py  pydog_gait.py  pydog_trot.py  pydog_walk.py
src/xingtian_dynamics/src/: main.cpp  main_test.cpp
src/xingtian_dynamics/src/Controllers/: DesiredStateCommand.cpp  FootSwingTrajectory.cpp
src/xingtian_dynamics/src/FSM/: FSM.cpp  FSMState.cpp  State_BalanceTest.cpp  State_FixedStand.cpp  State_FreeStand.cpp  State_Passive.cpp  State_StepTest.cpp  State_SwingTest.cpp  State_Trotting copy.txt  State_Trotting.cpp  State_Trotting_old4_14.txt  State_WheelTest.cpp
src/xingtian_dynamics/src/Gait/: FeetEndCal copy.txt  FeetEndCal.cpp  GaitGenerator copy.txt  GaitGenerator.cpp  GaitScheduler.cpp  WaveGenerator.cpp
src/xingtian_dynamics/src/SparseCMPC/: GraphSearch.cpp  SparseCMPC.cpp
src/xingtian_dynamics/src/WBC_Ctrl/: WBC_Ctrl.cpp
src/xingtian_dynamics/src/common/: LowPassFilter.cpp  Quadruped.cpp  SpatialInertia.cpp  xingtianRobot.cpp  xingtian_dynamic_model.txt  xingtian_leg.cpp
src/xingtian_dynamics/src/control/: BalanceCtrl.cpp  ControlFrame.cpp  Estimator.cpp  Estimator_new.txt
src/xingtian_dynamics/src/convexMPC/: ConvexMPCLocomotion.cpp  Gait.cpp  RobotState.cpp  SolverMPC.cpp  convexMPC_interface.cpp
src/xingtian_dynamics/urdf/: xingtian.csv  xingtian.gazebo.xacro  xingtian_primal.urdf  xingtian_urdf.xacro  xingtian_urdf_error.xacro  xingtian_urdf_l.xacro
src/xingtian_dynamics/world/: circumstance.world  pingtai.world  xingtian.world
(+52 files in other folders)
