<package format="2">
  <name>xingtian_dynamics</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for xingtian_dynamics</p>
    <p>This package contains configuration data, 3D models and launch files
for xingtian robot</p>
  </description>
  <author>TODO</author>
  <maintainer email="TODO@email.com" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>genmsg</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>MYROBOT_control</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>joint_state_publisher</depend>
  <depend>gazebo</depend>
  <depend>controller_manager</depend>
  <depend>joint_state_controller</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_ros_control</depend>
  <depend>gazebo_plugins</depend>
  <depend>urdf</depend>
  <depend>xacro</depend>
  <depend>tf</depend>
  <depend>rostopic</depend>
  <depend>xingtian_msgs</depend>
  <!-- <build_depend>xingtian_msgs</build_depend>
  <exec_depend>xingtian_msgs</exec_depend> -->
  <export>
    <architecture_independent />
  </export>
</package>